Fix gutter and top misalignment due to owl
Override owl selector's margin on media objects, add right, bottom
margins for gutters.

--- a/4-floats/style.css
+++ b/4-floats/style.css
@@ -37,7 +37,10 @@ main {
 
 .media {
   float: left;
-  width: 50%;
+  width: calc(50% - 1.5em);
+  margin: 0 1.5em 1.5em 0; /* override margin from owl selector */
+  /* Note: right margins stack up w/ container's padding on the right side */
+  padding: 1.5em;
   background-color: #eee;
   border-radius: .5em;
 }
@@ -48,12 +51,12 @@ main {
 }
 
 /* preventing margin collapsing outside the container */
+/* and expanding container (background) under all its floats */
 .clearfix::before,
 .clearfix::after {
   content:" ";
   display: table;
 }
-
 .clearfix::after {
   clear: both;
 }
